# ComfyUI-Tara-LLM-Integration

./: .gitignore  CHANGELOG  README.md  __init__.py  example_node.py  groq_master.py  prompt-2.md  pyproject.toml  requirements.txt  tara_master.py
.github/: FUNDING.yml
example/: daisychain.json  demo.json  prompt-ab-test.json  simple.json  tara-advancd-llm.json  tara-composition.json  tara-ollama.json
py/: prompt-1.md  prompt-2.md  requirements.txt  tara_advanced.py  tara_llm_config.py  tara_master.py
